# backend-api

./: .gitignore  Cargo.toml  d1c.toml  package.json  temp.db  wrangler.jsonc  wrangler.toml
db/queries/: example.sql
schemas/: 001_core.sql  002_guild_config.sql  003_afk.sql  004_leveling.sql  005_birthday.sql  005_triggers.sql  006_permission.sql  007_embed.sql  008_reaction.sql  009_logs.sql  010_voice.sql  011_giveaway.sql  012_misc.sql  013_members.sql  014_command_aliases.sql  100_triggers.sql  101_triggers.sql  schema.sql
scripts/: build-db.ps1  build-db.sh
src/: lib.rs
src/durables/: bot_room.rs  mod.rs
src/durables/bot/: alarms.rs  misc.rs  mod.rs  shards.rs
src/middleware/: api_protect.rs  bot_only.rs  cookie_check.rs  database.rs  mod.rs  requested_user.rs
src/routes/: mod.rs
src/routes/api/: auth.rs  guilds.rs  mod.rs  shards.rs
src/routes/api/protected/: gateway.rs  mod.rs
src/routes/api/protected/afk/: config.rs  mod.rs  stream.rs
src/routes/api/protected/birthday/: mod.rs  stream.rs
src/routes/api/protected/guild/: birthday.rs  info.rs  member.rs  mod.rs  settings.rs  shard.rs
src/routes/api/protected/guild/settings/: colour.rs  language.rs  mod.rs  prefix.rs  timezone.rs
src/routes/api/protected/streams/: mod.rs
src/routes/api/protected/user/: afk.rs  birthday.rs  mod.rs
src/routes/cdn/: mod.rs
src/schema/: afk.rs  config.rs  guild.rs  mod.rs  shard.rs
src/schema/config/: aliases.rs  logs.rs  mod.rs  voice_configs.rs
src/schema/guild/: member.rs  mod.rs  permission.rs  setting.rs  settings.rs
src/schema/guild/configuration/: aliases.rs  leveling.rs  logs.rs  mod.rs  voice_master.rs
src/schema/guild/misc/: birthday.rs  mod.rs  reaction.rs  reminder.rs  timed_message.rs
src/schema/guild/utility/: embed.rs  giveaway.rs  mod.rs
src/schema/user/: afk.rs  birthday.rs  giveaway.rs  leveling.rs  member.rs  mod.rs  voice.rs
src/services/: guilds.rs  mod.rs  streaming.rs  websocket.rs
src/services/websocket/: mod.rs  ping.rs  shards.rs
src/state/: app_state.rs  database.rs  mod.rs  user.rs
