[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Gilbert O. <giloe.dev@gmail.com>"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
lto = "fat"
debug = true
incremental = false

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json'] }
time = { version = "0.3", features = ["wasm-bindgen"] }

worker = { version = "0.7.2", features = ['http', 'axum', "timezone", "d1"] }
worker-macros = { version = "0.7.2", features = ['http'] }
axum = { version = "0.8", default-features = false, features = [
    "tracing",
    "form",
    "json",
    "query",
    "multipart",
    "macros",
] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower = { version = "0.5" }

wasm-bindgen = { version = "0.2.106", features = ["serde"] }
wasm-bindgen-futures = { version = "0.4.56" }
rayon-wasm = "1.6.2"
futures = { version = "0.3.31" }
futures-util = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = [] }

urlencoding = "2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
cookie = { version = "0.18", features = [] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }

sea-query = { version = "0.32.6", default-features = false, features = [
    "backend-sqlite",
    "derive",
] }
imageproc = { version = "0.25", default-features = false }
bincode = "1.3"

[dependencies.image]
version = "0.25"
default-features = false
features = ["default-formats"]
